// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CompatSessionDetail> > renders a compatability session details 1`] = `
<div>
  <div
    class="_blockList_f8cc7f"
  >
    <header
      class="_header_92353c"
    >
      <button
        class="_icon-button_16nk7_17"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="0"
        type="button"
      >
        <div
          class="_indicator-icon_133tf_26"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            class="cpd-icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.2071 5.29289C12.5976 5.68342 12.5976 6.31658 12.2071 6.70711L7.91421 11H18.5C19.0523 11 19.5 11.4477 19.5 12C19.5 12.5523 19.0523 13 18.5 13H7.91421L12.2071 17.2929C12.5976 17.6834 12.5976 18.3166 12.2071 18.7071C11.8166 19.0976 11.1834 19.0976 10.7929 18.7071L4.79289 12.7071C4.40237 12.3166 4.40237 11.6834 4.79289 11.2929L10.7929 5.29289C11.1834 4.90237 11.8166 4.90237 12.2071 5.29289Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
      <h3
        class="_typography_yh5dq_162 _font-heading-md-semibold_yh5dq_121"
      >
        abcd1234
      </h3>
    </header>
    <div
      class="_block_17898c"
    >
      <h6
        class="_typography_yh5dq_162 _font-body-md-semibold_yh5dq_64"
      >
        Session
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              session-id
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Device ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              abcd1234
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Signed in
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <time
              datetime="2023-06-29T03:35:17Z"
            >
              Thu, 29 Jun 2023, 03:35
            </time>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Last Active
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <span
              title="Sat, 29 Jul 2023, 03:35"
            >
              Inactive for 90+ days
            </span>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            IP Address
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              1.2.3.4
            </code>
          </p>
        </li>
      </ul>
    </div>
    <div
      class="_block_17898c"
    >
      <h6
        class="_typography_yh5dq_162 _font-body-md-semibold_yh5dq_64"
      >
        Client
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Name
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            element.io
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Uri
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <a
              class="_link_1mzip_17 _externalLink_a97355"
              data-kind="primary"
              href="https://element.io"
              rel="noreferrer noopener"
              target="_blank"
            >
              https://element.io
            </a>
          </p>
        </li>
      </ul>
    </div>
    <button
      aria-controls="radix-:r0:"
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="_button_dyfp8_17 _destructive_dyfp8_99"
      data-kind="secondary"
      data-size="sm"
      data-state="closed"
      role="button"
      tabindex="0"
      type="button"
    >
      End session
    </button>
  </div>
</div>
`;

exports[`<CompatSessionDetail> > renders a compatability session without an ssoLogin 1`] = `
<div>
  <div
    class="_blockList_f8cc7f"
  >
    <header
      class="_header_92353c"
    >
      <button
        class="_icon-button_16nk7_17"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="0"
        type="button"
      >
        <div
          class="_indicator-icon_133tf_26"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            class="cpd-icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.2071 5.29289C12.5976 5.68342 12.5976 6.31658 12.2071 6.70711L7.91421 11H18.5C19.0523 11 19.5 11.4477 19.5 12C19.5 12.5523 19.0523 13 18.5 13H7.91421L12.2071 17.2929C12.5976 17.6834 12.5976 18.3166 12.2071 18.7071C11.8166 19.0976 11.1834 19.0976 10.7929 18.7071L4.79289 12.7071C4.40237 12.3166 4.40237 11.6834 4.79289 11.2929L10.7929 5.29289C11.1834 4.90237 11.8166 4.90237 12.2071 5.29289Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
      <h3
        class="_typography_yh5dq_162 _font-heading-md-semibold_yh5dq_121"
      >
        abcd1234
      </h3>
    </header>
    <div
      class="_block_17898c"
    >
      <h6
        class="_typography_yh5dq_162 _font-body-md-semibold_yh5dq_64"
      >
        Session
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              session-id
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Device ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              abcd1234
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Signed in
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <time
              datetime="2023-06-29T03:35:17Z"
            >
              Thu, 29 Jun 2023, 03:35
            </time>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Last Active
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <span
              title="Sat, 29 Jul 2023, 03:35"
            >
              Inactive for 90+ days
            </span>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            IP Address
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              1.2.3.4
            </code>
          </p>
        </li>
      </ul>
    </div>
    <button
      aria-controls="radix-:r3:"
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="_button_dyfp8_17 _destructive_dyfp8_99"
      data-kind="secondary"
      data-size="sm"
      data-state="closed"
      role="button"
      tabindex="0"
      type="button"
    >
      End session
    </button>
  </div>
</div>
`;
